Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,23 +199,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'HOMER SIMPSON'"
+       "str"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'Homer Simpson'.upper()\n",
-    "type"
+    "type('Homer Simpson')"
    ]
   },
   {
